--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ h1 {
     font-size: 45px;
     color: #444;
 }
+h2 {
+    color: #444;
+    font-size: 55px;
+}
 ul, ol {
     list-style: none;
 }
@@ -25,7 +29,7 @@ a {
     padding: 0 10px;
 }
 .orange {
-    color: #ff7100;
+    color: #ff7a00;
 }
 
 /*      HEADER       */
@@ -48,4 +52,27 @@ header nav ul li a {
     text-transform: uppercase;
     font-weight: bold;
     margin-right: 20px;
+}
+/*      MAIN IMAGE       */
+#main-image {
+    height: 580px;
+    background: url('images/main.jpg') center;
+}
+#main-image h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 150px 0 40px 0;
+}
+.button-1 {
+    display: block;
+    width: 120px;
+    height: 50px;
+    background: #ff7a00;
+    color: #fff;
+    font-size: 20px;
+    margin: 0 auto;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 3px;
 }
