--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,14 @@ h2 {
     color: #444;
     font-size: 55px;
 }
+h4 {
+    font-size: 24px;
+    color: #444;
+}
+p {
+    line-height: 20px;
+    color: #777;
+}
 ul, ol {
     list-style: none;
 }
@@ -53,6 +61,7 @@ header nav ul li a {
     font-weight: bold;
     margin-right: 20px;
 }
+
 /*      MAIN IMAGE       */
 #main-image {
     height: 580px;
@@ -75,4 +84,35 @@ header nav ul li a {
     line-height: 50px;
     text-align: center;
     border-radius: 3px;
+}
+.button-1:hover {
+    background: #02b8dd;
+}
+
+/*      STEPS       */
+#steps ul {
+    margin: 80px 0;
+}
+#steps ul li {
+    width: 300px;
+    float: left;
+    padding-top: 140px;
+    text-align: center;
+    margin-right: 10px;
+}
+#steps h4 {
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+#steps p {
+    margin-bottom: 20px;
+}
+#step-1 {
+    background: url('images/steps-icon-1.png') no-repeat top center;
+}
+#step-2 {
+    background: url('images/steps-icon-2.png') no-repeat top center;
+}
+#step-3 {
+    background: url('images/steps-icon-3.png') no-repeat top center;
 }
