--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,13 @@ a {
 .orange {
     color: #ff7a00;
 }
+.clear {
+    clear: both;
+}
+small {
+    font-size: 13px;
+    font-style: italic;
+}
 
 /*      HEADER       */
 header {
@@ -115,4 +122,48 @@ header nav ul li a {
 }
 #step-3 {
     background: url('images/steps-icon-3.png') no-repeat top center;
+}
+
+/*      Possibilities       */
+#possibilities {
+    background-color: #efefef;
+    padding: 60px 0;
+}
+#possibilities article {
+    width: 460px;
+    height: 270px;
+    float: left;
+    border-radius: 10px;
+}
+#possibilities article:first-child {
+    margin-right: 20px;
+}
+.overlay  {
+    background: rgba(255, 255, 255, 0.95);
+    height: 100%;
+    width: 190px;
+    padding: 20px;
+    border-radius: 10px 0 0 10px;
+    text-align: center;
+    box-sizing: border-box;
+}
+article h4 {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+}
+#possibilities p {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.button-2 {
+    color: #fff;
+    background: #ff7a00;
+    padding: 6px 20px;
+    border-radius: 3px;
+}
+.button-2:hover {
+    background: #02b8dd;
 }
