--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,21 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
+h1, h2, h3, h4, h5, h6 {
+    color: #444;
+}
 h1 {
     font-family: 'Crete Round', serif;
     font-size: 45px;
-    color: #444;
 }
 h2 {
-    color: #444;
     font-size: 55px;
+}
+h3 {
+    font-size: 30px;
 }
 h4 {
     font-size: 24px;
-    color: #444;
 }
 p {
     line-height: 20px;
@@ -165,5 +168,48 @@ article h4 {
     border-radius: 3px;
 }
 .button-2:hover {
+    color: #fff;
     background: #02b8dd;
+}
+
+/*      CONTACT       */
+#contact {
+    padding: 60px 0;
+    text-align: center;
+}
+#contact h3 {
+    width: 400px;
+    text-transform: uppercase;
+    margin: 0 auto 20px auto;
+    border-bottom: 1px solid #02b8dd;
+    padding-bottom: 20px;
+}
+form {
+    margin: 60px 0 20px 0;
+}
+label {
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 10px;
+    color: #777;
+}
+input[type="text"] {
+    padding: 10px;
+    font-size: 20px;
+    margin-right: 20px;
+    border: 2px solid #ddd;
+    border-radius: 3px;
+}
+.button-3 {
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 11px;
+    background-color: #02b8dd;
+    border-style: none;
+    border-radius: 3px;
+}
+.button-3:hover {
+    color: #fff;
+    background-color: #444;
 }
