footer html + css

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 15px;
 }
 h1, h2, h3, h4, h5, h6 {
@@ -27,7 +27,7 @@ p {
     line-height: 20px;
     color: #777;
 }
-ul, ol {
+ul {
     list-style: none;
 }
 a {
@@ -212,4 +212,21 @@ input[type="text"] {
 .button-3:hover {
     color: #fff;
     background-color: #444;
+}
+
+/*      FOOTER       */
+footer {
+    height: 260px;
+    background-color: #444;
+}
+footer h1 {
+    color: #fff;
+    text-align: center;
+    padding-top: 80px;
+}
+.copyright {
+    text-align: center;
+    font-weight: bold;
+    padding-top: 30px;
+    color: #777;
 }
