--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,32 @@ header {
     height: 120px;
 }
 header h1 {
+    position: absolute;
+    font-family: 'Crete Round', serif;
+    font-size: 45px;
+    transform: translate(-50%, -50%);
+    animation: morph-effect 10s
+    infinite ease-in-out;
+}
+header h1:nth-child(1) {
+    animation-delay: -10s;
+}
+header h1:nth-child(2) {
+    animation-delay: -5s;
+}
+@keyframes morph-effect {
+    0%, 20%, 100% {
+        filter: blur(0px) !important;
+        opacity: 1;
+    }
+    40%, 80% {
+        filter: blur(16px) !important;
+        opacity: 0;
+    }
+}
+header h1 {
     float: left;
-    margin-top: 32px;
+    margin-top: 54px;
 }
 header nav {
     float: right;
@@ -127,18 +151,18 @@ header nav ul li a {
     background: url('images/steps-icon-3.png') no-repeat top center;
 }
 
-/*      Possibilities       */
-#possibilities {
+/*      Competences       */
+#competences {
     background-color: #efefef;
     padding: 60px 0;
 }
-#possibilities article {
+#competences article {
     width: 460px;
     height: 270px;
     float: left;
     border-radius: 10px;
 }
-#possibilities article:first-child {
+#competences article:first-child {
     margin-right: 20px;
 }
 .overlay  {
@@ -157,7 +181,7 @@ article h4 {
     text-align: center;
     margin-bottom: 20px;
 }
-#possibilities p {
+#competences p {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -213,6 +237,35 @@ input[type="text"] {
     color: #fff;
     background-color: #444;
 }
+/* .input-group  {
+    position: relative !important;
+}
+input {
+    border: solid 1.5px #9E9E9E;
+    border-radius: 1rem;
+    background: none;
+    padding: 1rem;
+    color: #F5F5F5;
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+label {
+    position: absolute;
+    left : 16px;
+    color: #E8E8E8;
+    pointer-events: none;
+    transform: translateY(1rem);
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+input:focus {
+    outline: none;
+    border: 1.5px solid #1A73E8;
+}
+input:focus ~ label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: #020E26;
+    padding: 0 0.2em;
+    color: #2196F3S;
+} */
 
 /*      FOOTER       */
 footer {
